blocks/dealer-locator/dealer-locator.css
/* ... */
.dealer-locator .nearby-pins article.teaser .teaser-bottom .left .website:hover,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .left .call:hover,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .left .direction:hover,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .left .more:hover,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .right .website:hover,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .right .call:hover,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .right .direction:hover,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .right .more:hover {
  background: #fff;
}

@media (max-width: 992px) {
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .call,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .direction,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .more,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .right .call,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .right .direction,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .right .more {
    width: 56px;
    margin-left: 4px;
  }

  .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .call:hover,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .direction:hover,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .more:hover,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .right .call:hover,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .right .direction:hover,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .right .more:hover {
    background: 0 0;
  }

  .dealer-locator .nearby-pins article.teaser .marker-main {
    min-width: 10%;
    justify-content: center;
    display: flex;
  }
}

@media (max-width: 992px) {
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .website:hover,
  .dealer-locator .nearby-pins article.teaser .teaser-bottom .right .website:hover {
    background: 0 0;
  }

  .dealer-locator .nearby-pins article.teaser .teaser-top .left {
    max-width: unset;
  }

  .dealer-locator .nearby-pins article.teaser .teaser-top .heading p {
    max-width: unset;
  }
}

.dealer-locator .nearby-pins article.teaser .teaser-bottom .left a,
.dealer-locator .nearby-pins article.teaser .teaser-bottom .right a {
  cursor: pointer;
  vertical-align: middle;
  color: #323232;
}

.dealer-locator .nearby-select {
  font-size: 15px;
  cursor: pointer;
  height: 100%;
  position: relative;
}

.dealer-locator .nearby-select > div {
  border: 1px solid transparent;
}

.dealer-locator .nearby-select::-webkit-scrollbar-thumb {
  background-color: #888 !important;
}

.dealer-locator .nearby-select::-webkit-scrollbar {
  width: 6px !important;
}

.dealer-locator .nearby-select .panel-card {
  box-shadow: none;
  border-bottom: 1px solid var(--c-grey-1);
}

.dealer-locator .nearby-select .panel-card:hover {
  background-color: #d1d1d1;
}

.dealer-locator .nearby-select article.teaser {
  font-size: inherit;
  padding-bottom: 12px;
  padding-top: 5px;
  width: 100%;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.dealer-locator .nearby-select article.teaser .teaser-top {
  cursor: pointer;
}

.dealer-locator .nearby-select article.teaser .teaser-top #marker {
  width: 30px;
  float: left;
  padding-top: 10px;
  padding-right: 10px;
}

.dealer-locator .nearby-select article.teaser .teaser-top .heading {
  display: flex;
  -webkit-box-pack: justify;
  -moz-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.dealer-locator .nearby-select article.teaser .teaser-top .heading p {
  color: #007bcd;
  font-size: 14px;
  display: block;
  font-weight: 700;
  margin: 10px 0 0;
  max-width: 230px;
}

.dealer-locator .nearby-select article.teaser .teaser-top .heading div {
  font-size: 14px;
  margin-top: 10px;
  font-weight: 700;
  color: #000;
}

.dealer-locator .nearby-select article.teaser .teaser-top .info {
  margin-top: 2px;
  font-size: 12px;
  display: flex;
  -webkit-box-pack: justify;
  -moz-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.dealer-locator .nearby-select article.teaser .teaser-top .info .hours {
  display: block;
}

.dealer-locator .nearby-select article.teaser .teaser-bottom {
  display: flex;
  -webkit-box-pack: justify;
  -moz-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 14px;
}

.dealer-locator .nearby-select article.teaser .teaser-bottom .left,
.dealer-locator .nearby-select article.teaser .teaser-bottom .right {
  border: 0;
  color: inherit;
  font: inherit;
  font-size: 12px;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.dealer-locator .nearby-select article.teaser .teaser-bottom .left a,
.dealer-locator .nearby-select article.teaser .teaser-bottom .right a {
  cursor: pointer;
}

.dealer-locator .map-geo-container {
  float: right;
  margin-top: 10px;
  position: absolute;
  right: 10px;
}

@media (max-width: 992px) {
  .dealer-locator .nearby-select .panel-card:hover {
    background-color: unset !important;
  }

  .dealer-locator .map-geo-container {
    display: none;
  }

  .dealer-locator .go-back-direction {
    margin-top: -18px;
  }
}

.dealer-locator .map-geo-container button {
  background: #fff;
  border: #fff;
  border-radius: 2px;
  width: 28px;
  height: 38px;
  margin: 0;
}

@media (max-width: 1024px) {
  .dealer-locator .map-geo-container button {
    width: 28px;
    height: 38px;
    max-width: 0;
    padding-right: 30px;
    padding-left: 11px;
  }
}

.dealer-locator .map-geo-container button {
  padding: 1px 6px;
}

.dealer-locator .map-geo-container button img {
  width: 18px;
  height: 18px;
}
/* ... */

